Fix horizontal scrollbar caused by vertical scrollbar on worldmap

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -68,9 +68,9 @@ figure {
 
   &.full-width {
     left: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-width: 100vw;
+    margin-left: -49vw;
+    margin-right: -49vw;
+    max-width: 98vw; // Don't use 100vw here as it includes the scrollbar
     max-height: $max-full-height-img;
     position: relative;
     right: 50%;
